# namr1-stonks-bot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml
src/: main.rs  stocks.rs  test.rs
