[package]
name = "namr1-stonks-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
yahoo_finance_api = "1.2.2"
chrono = "0.4.19"
chrono-tz = "0.6.1"
serenity = { version = "0.10.10", default-features=false, features=["cache", "client", "gateway", "http", "rustls_backend", "model"]}
dotenv = "0.15.0"