[package]
name = "namr1-stonks-bot"
version = "0.1.0"
edition = "2021"
default-run="namr1-stonks-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="namr1-stonks-bot"
path="src/main.rs"

[[bin]]
name="run-stocks"
path="src/test.rs"


[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
yahoo_finance_api = "2"
chrono = "0.4"
chrono-tz = "0.6"
serenity = { version = "0.11", default-features=false, features=["cache", "client", "gateway", "http", "rustls_backend", "model"]}
dotenv = "0.15"
color-eyre = "0.6.3"
